[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["Tommy Joe Lund <tomlun92@gmail.com>"]
edition = "2018"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "hopsnes"
path = "benches/hopsnes.rs"
